--- a/.travis.yml
+++ b/.travis.yml
@@ -81,7 +81,7 @@ install:
   # show the plugins folder contents to make sure the plugin folder is there
   - ls $WP_FOLDER/wp-content/plugins
   # activate the plugin
-  - wp plugin activate fields
+  - wp plugin activate cleaner
   # make sure the plugin is active on the site
   - wp plugin list --status=active
   # export a dump of the just installed database to the _data folder
@@ -110,4 +110,4 @@ script:
   # - codecept run functional
   # - codecept run integration
   # - codecept run unit
-  - codecept run wpunit
+  - codecept run wpunit && codecept run unit
