--- a/.travis.yml
+++ b/.travis.yml
@@ -101,7 +101,8 @@ install:
 
 before_script:
   # restart Nnginx and PHP-FPM services
-  - sudo service php5-fpm restart
+#  - sudo service php5-fpm restart
+  - sudo service php7.0-fpm restart
   - sudo service nginx restart
 
   # build Codeception modules
