--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ notifications:
   email: false
 
 php:
-  - '7.0'
-#  - '7.1'
-#  - nightly
+  - '7.1'
+  - '7.2'
+  - nightly
 
 matrix:
   fast_finish: true
