--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,10 @@
     },
     "require-dev": {
         "lucatume/wp-browser": "~2.2",
-        "italystrap/debug": "~2.0"
+        "italystrap/debug": "~2.0",
+        "wp-coding-standards/wpcs": "^2.1",
+        "phpcompatibility/php-compatibility": "*",
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0"
     },
     "autoload": {
         "files": [
@@ -26,5 +29,14 @@
         "psr-4": {
             "ItalyStrap\\Cleaner\\": "src/"
         }
+    },
+    "scripts": {
+        "check": [
+            ".\\vendor\\bin\\phpcs -p --standard=PHPCompatibility src",
+            ".\\vendor\\bin\\phpcs -p --standard=WordPress src"
+        ],
+        "test": [
+            "test"
+        ]
     }
 }
