--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     },
     "require-dev": {
         "lucatume/wp-browser": "~2.2",
+        "lucatume/function-mocker-le": "^1.0",
         "italystrap/debug": "~2.0",
         "wp-coding-standards/wpcs": "^2.1",
         "phpcompatibility/php-compatibility": "*",
