--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "italystrap/cleaner",
     "description": "Data cleaner for PHP",
     "type": "wordpress-plugin",
-    "license": "GPL-2.0-or-later",
+    "license": "MIT",
     "authors": [
         {
             "name": "overclokk",
@@ -21,7 +21,9 @@
         "italystrap/debug": "~2.0",
         "wp-coding-standards/wpcs": "^2.1",
         "phpcompatibility/php-compatibility": "*",
-        "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0"
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
+        "phpstan/phpstan": "^0.11.16",
+        "szepeviktor/phpstan-wordpress": "^0.3.0"
     },
     "autoload": {
         "files": [
